# qtgraph

./: CLAUDE.md  LICENSE  README.md  pixi.toml  pyproject.toml
src/qtgraph/: __init__.py
src/qtgraph/partition/: __init__.py  _base.py  _partition.py  builder.py  data.py  hetero_builder.py  hetero_data.py
tests/: conftest.py  generators.py  test_partitioned_data.py  test_partitioned_hetero_data.py
